more playing with Llama 3.1/tool-calling-agent-local.ipynb

--- a/Llama 3.1/Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb
+++ b/Llama 3.1/Fine_Tune_Llama_3_1_8B_with_Unsloth.ipynb
@@ -127,76 +127,6 @@
             "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.26.post1. FA2 = True]\n",
             " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
           ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "96d5a82adeff456caff4d820ccd8bf5c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model.safetensors:   0%|          | 0.00/5.70G [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f423d90b996d47c5971122032b8fcfcd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "generation_config.json:   0%|          | 0.00/184 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b3f6d907f7af4330bdce32a2d10f0851",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer_config.json:   0%|          | 0.00/50.6k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "0f2d3c0391e14d9eb359c17fa1bf34cf",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/9.09M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4b0845ae0c1443e2a6c7b9b5f3c4d5de",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "special_tokens_map.json:   0%|          | 0.00/459 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
         }
       ],
       "source": [
@@ -208,6 +138,8 @@
         "    load_in_4bit=True,\n",
         "    dtype=None,\n",
         ")\n",
+        "\n",
+        "# 6.7s\n",
         "\n",
         "# First time download ... I had other downloads happening when I lauched this ... and Jack was also sucking up bandwidth ... \n",
         "# 99m 0.0s\n"
@@ -222,7 +154,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mon Jul 29 18:48:20 2024       \n",
+            "Tue Jul 30 10:49:15 2024       \n",
             "+---------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
             "|-----------------------------------------+----------------------+----------------------+\n",
@@ -231,11 +163,11 @@
             "|                                         |                      |               MIG M. |\n",
             "|=========================================+======================+======================|\n",
             "|   0  NVIDIA GeForce GTX 1050        Off | 00000000:01:00.0 Off |                  N/A |\n",
-            "|  0%   42C    P8              N/A /  70W |    148MiB /  2048MiB |      0%      Default |\n",
+            "|  0%   40C    P8              N/A /  70W |    147MiB /  2048MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:02:00.0 Off |                  Off |\n",
-            "|  0%   36C    P8              14W / 450W |   6566MiB / 24564MiB |      0%      Default |\n",
+            "|  0%   32C    P2              50W / 450W |   6566MiB / 24564MiB |      0%      Default |\n",
             "|                                         |                      |                  N/A |\n",
             "+-----------------------------------------+----------------------+----------------------+\n",
             "                                                                                         \n",
@@ -244,10 +176,10 @@
             "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
             "|        ID   ID                                                             Usage      |\n",
             "|=======================================================================================|\n",
-            "|    0   N/A  N/A      1721      G   /usr/lib/xorg/Xorg                          137MiB |\n",
-            "|    0   N/A  N/A      1818      G   /usr/bin/gnome-shell                          6MiB |\n",
-            "|    1   N/A  N/A      1721      G   /usr/lib/xorg/Xorg                            4MiB |\n",
-            "|    1   N/A  N/A    110319      C   ...forge3/envs/unsloth_env2/bin/python     6546MiB |\n",
+            "|    0   N/A  N/A      1748      G   /usr/lib/xorg/Xorg                          137MiB |\n",
+            "|    0   N/A  N/A      1838      G   /usr/bin/gnome-shell                          5MiB |\n",
+            "|    1   N/A  N/A      1748      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+            "|    1   N/A  N/A      5721      C   ...forge3/envs/unsloth_env2/bin/python     6546MiB |\n",
             "+---------------------------------------------------------------------------------------+\n"
           ]
         }
@@ -334,52 +266,11 @@
       "metadata": {
         "id": "sqGnvaT8is-R"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5334a3818e0e4789b82ce6b65d87c1ec",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading readme:   0%|          | 0.00/982 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "62d0c9ecd43b4f7e80f27e6c0978f161",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Downloading data:   0%|          | 0.00/117M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8c58fd6a343d494f8eb3f83edaf28e95",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating train split:   0%|          | 0/100000 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = load_dataset(\"mlabonne/FineTome-100k\", split=\"train\")\n",
+        "\n",
+        "# 1.3s\n",
         "\n",
         "# initial download of the dataset\n",
         "# 1m 40.4s"
@@ -389,25 +280,11 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b1751df0f24a42ba9533b1f24a6e9f91",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Map:   0%|          | 0/100000 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = dataset.map(apply_template, batched=True)\n",
         "\n",
+        "# 0.0s\n",
         "# 3.9s"
       ]
     },
@@ -422,26 +299,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "gcPAQihcjcfl"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6713a79625954c4b847852caabfb8b20",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating train split: 0 examples [00:00, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "trainer=SFTTrainer(\n",
         "    model=model,\n",
@@ -625,6 +487,34 @@
       ],
       "source": [
         "trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "==((====))==  Unsloth 2024.8: Fast Llama patching. Transformers = 4.43.3.\n",
+            "   \\\\   /|    GPU: NVIDIA GeForce RTX 4090. Max memory: 23.65 GB. Platform = Linux.\n",
+            "O^O/ \\_/ \\    Pytorch: 2.3.0. CUDA = 8.9. CUDA Toolkit = 12.1.\n",
+            "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.26.post1. FA2 = True]\n",
+            " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n"
+          ]
+        }
+      ],
+      "source": [
+        "# I added this here to pull down the 'mlabonne/FineLlama-3.1-8B-GGUF' model ... \n",
+        "# finemodel, tokenizer = FastLanguageModel.from_pretrained(\n",
+        "#     # model_name=\"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",\n",
+        "#     model_name=\"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",\n",
+        "#     max_seq_length=max_seq_length,\n",
+        "#     load_in_4bit=True,\n",
+        "#     dtype=None,\n",
+        "# )\n"
       ]
     },
     {
