Llama 3.1/rag-agent-testing-local.ipynb

--- a/Llama 3.1/rag-agent-testing-local.ipynb
+++ b/Llama 3.1/rag-agent-testing-local.ipynb
@@ -5,6 +5,10 @@
    "id": "9465d835",
    "metadata": {},
    "source": [
+    "## Tuesday, July 30, 2024\n",
+    "\n",
+    "Re-running again, but this time sending stuff to langsmith ... nice, it worked!\n",
+    "\n",
     "## Wednesday, July 24, 2024\n",
     "\n",
     "https://github.com/langchain-ai/langgraph/blob/main/examples/tutorials/rag-agent-testing-local.ipynb\n",
@@ -18,6 +22,40 @@
     "OK ... it's now later ... the final cell calls OpenAI stuff ... no key, hence it failed. Providing the key fixed it. \n",
     "\n",
     "This now all runs, but you have to step through it, to provide the required API keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "af7f848e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you may need to run this if the next cell fails because of an unknown key ... \n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
+    "# enter your api key\n",
+    "LANGCHAIN_API_KEY = getpass(\"Enter your API key: \")\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = LANGCHAIN_API_KEY\n",
+    "\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "81241893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you may need to run this if the next cell fails because of an unknown key ... \n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
+    "# enter your api key\n",
+    "TAVILY_API_KEY = getpass(\"Enter your API key: \")\n",
+    "os.environ[\"TAVILY_API_KEY\"] = TAVILY_API_KEY"
    ]
   },
   {
@@ -82,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "79081226",
    "metadata": {},
    "outputs": [],
@@ -97,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "67b6b354",
    "metadata": {},
    "outputs": [],
@@ -112,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f71b60c5",
    "metadata": {},
    "outputs": [],
@@ -124,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ef3554eb",
    "metadata": {},
    "outputs": [],
@@ -137,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "facec1c8",
    "metadata": {},
    "outputs": [],
@@ -148,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d5925281-6762-43f0-8efb-8e05d4391b8d",
    "metadata": {},
    "outputs": [],
@@ -167,23 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "84b026db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# you may need to run this if the next cell fails because of an unknown key ... \n",
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "# enter your api key\n",
-    "TAVILY_API_KEY = getpass(\"Enter your API key: \")\n",
-    "os.environ[\"TAVILY_API_KEY\"] = TAVILY_API_KEY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cb3dd4c4-8319-436a-b612-9e2e99a06ee4",
    "metadata": {},
    "outputs": [],
@@ -196,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6facb441",
    "metadata": {},
    "outputs": [],
@@ -223,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "93db9b3d-e93d-4837-baf5-dc1eb3126ede",
    "metadata": {},
    "outputs": [],
@@ -238,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "38b6b99f",
    "metadata": {},
    "outputs": [],
@@ -255,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "44a0f1e8-be63-4e64-98b8-582c390f263b",
    "metadata": {},
    "outputs": [],
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "de1b9ed9",
    "metadata": {},
    "outputs": [],
@@ -288,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1a2c73a4",
    "metadata": {},
    "outputs": [],
@@ -432,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fc6dbd23-ad44-4bf1-9216-86fa10420e5a",
    "metadata": {},
    "outputs": [
@@ -478,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "3689edb1-a852-40a8-8a60-0fb2de856ba3",
    "metadata": {},
    "outputs": [],
@@ -502,6 +524,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56cd7a93",
+   "metadata": {},
+   "source": [
+    "The next cell makes the first call to Ollama ... (the original code had this commented out ... wtf?!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e2dd8c93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'response': 'Sensory memory, short-term memory, and long-term memory are the types of agent memory. Sensory memory is used for learning embedding representations for raw inputs, short-term memory is used for in-context learning, and long-term memory is an external vector store that can be accessed via fast retrieval.',\n",
+       " 'steps': ['retrieve_documents',\n",
+       "  'grade_document_retrieval',\n",
+       "  'generate_answer']}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = predict_custom_agent_answer(example)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a7a8fe4-27c4-48a8-a2da-dc369c1cc09c",
    "metadata": {},
    "source": [
@@ -520,23 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ed697e5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# you may need to run this if the next cell fails because of an unknown key ... \n",
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "# enter your api key\n",
-    "LANGCHAIN_API_KEY = getpass(\"Enter your API key: \")\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = LANGCHAIN_API_KEY\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "a5e43252-e5e8-4929-ad7d-3eff3052c1cb",
    "metadata": {},
    "outputs": [],
@@ -590,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "86f5be3b",
    "metadata": {},
    "outputs": [],
@@ -604,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "1263f1a0-078c-44c6-98e2-b3efd0371072",
    "metadata": {},
    "outputs": [],
@@ -649,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "d6cbc8c3-c312-4ff4-876f-59a8928f18d1",
    "metadata": {},
    "outputs": [],
@@ -685,12 +724,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "a1cd6a3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hmm the next cell makes a call to OpenAI ... why?\n",
+    "# hmm the next cell makes a call to OpenAI ... \n",
     "# you may need to run this if the next cell fails because of an unknown key ... \n",
     "import os\n",
     "from getpass import getpass\n",
@@ -702,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "17737eb1-d25d-4c52-a2f5-34f90a68d478",
    "metadata": {},
    "outputs": [
@@ -710,8 +749,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "View the evaluation results for experiment: 'custom-agent-llama3.1-answer-and-tool-use-49b47b02' at:\n",
-      "https://smith.langchain.com/o/51a420bb-f90c-5ed2-a7ac-2ec530e5afc3/datasets/e24d37ff-5ba2-42c4-8df1-36e53d6b72dd/compare?selectedSessions=9a0794d7-2044-430a-b90c-e9d1dad3f7e9\n",
+      "View the evaluation results for experiment: 'custom-agent-llama3.1-answer-and-tool-use-078216fe' at:\n",
+      "https://smith.langchain.com/o/51a420bb-f90c-5ed2-a7ac-2ec530e5afc3/datasets/e24d37ff-5ba2-42c4-8df1-36e53d6b72dd/compare?selectedSessions=6a108276-69bb-4436-a1a4-f74432193e49\n",
       "\n",
       "\n"
      ]
@@ -719,7 +758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "189c095f44ee4d28b5d0ce57d5604f22",
+       "model_id": "e6503fa394024102840ea1bea8f4ef9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -769,6 +808,7 @@
     "    metadata={\"version\": metadata},\n",
     ")\n",
     "\n",
+    "# 1m 41.6s\n",
     "# 1m 54.8s"
    ]
   },
@@ -793,14 +833,6 @@
     "\n",
     "![Screenshot 2024-07-23 at 12.39.27 PM.png](attachment:5e0fb308-080e-4621-ba20-55a655bb981e.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8eb46884-08aa-4ab4-8bb9-f72277c3b35b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
